force-app/main/default/objects/Contact/fields/Holiday_List__c.field-meta.xml
<CustomField>
    <fullName>Holiday_List__c</fullName>
    <description>DTG TAM holiday mailing list. Recipient should be selected to receive either a card or a gift.</description>
    <inlineHelpText>TAMs: Please select whether recipient should receive a holiday card or gift.</inlineHelpText>
    <label>Holiday List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>