force-app/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <description>Devrel account team manager profile field</description>
    <label>Job Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>