force-app/main/default/objects/Contact/fields/Platform_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Platform_Specialization__c</fullName>
    <inlineHelpText>Technical account team for devrel</inlineHelpText>
    <label>Platform Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS3</fullName>
            </value>
            <value>
                <fullName>PS4</fullName>
            </value>
            <value>
                <fullName>PS4 Pro</fullName>
            </value>
            <value>
                <fullName>PS Vita</fullName>
            </value>
            <value>
                <fullName>PS VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>