force-app/main/default/objects/Contact/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>