force-app/main/default/objects/Contact/fields/Technical_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specialization__c</fullName>
    <label>Technical Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>