force-app/main/default/objects/Contact/recordTypes/AdSales_RT_Contact_Record.recordType-meta.xml
<RecordType>
    <fullName>AdSales_RT_Contact_Record</fullName>
    <active>true</active>
    <label>AdSales Contact Record</label>
</RecordType>