force-app/main/default/objects/Contact/listViews/AdSales.listView-meta.xml
<ListView>
    <fullName>AdSales</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AdSales_RT_Contact_Record</value>
    </filters>
    <label>AdSales - All Contacts</label>
    <sharedTo>
        <roleAndSubordinates>Account_Manager_OPS</roleAndSubordinates>
        <roleAndSubordinates>Director_CP</roleAndSubordinates>
        <roleAndSubordinates>Director_CSM</roleAndSubordinates>
    </sharedTo>
</ListView>