force-app/main/default/objects/Contact/listViews/AdSales_My_Contacts.listView-meta.xml
<ListView>
    <fullName>AdSales_My_Contacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AdSales_RT_Contact_Record</value>
    </filters>
    <label>AdSales - My Contacts</label>
</ListView>