force-app/main/default/objects/Contact/listViews/SBD_M_E_Contacts.listView-meta.xml
<ListView>
    <fullName>SBD_M_E_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>fong,wamugi,cheng,menor,gottlieb,knapp,sen,nakajima,iluore,tomczek,usui</value>
    </filters>
    <label>SBD M&amp;E Contacts</label>
    <sharedTo>
        <group>SBD_MandEGroup</group>
        <group>SBD_Team_NGA_Opportunity_Report</group>
    </sharedTo>
</ListView>